Updated image/a link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><em>Paris</em></li>
         </ol>
 
-        <a href="favorites.html">Click here to check out my favorite animal</a>
+        <div><a href="favorites.html">Click here to check out my favorite animal</a></div>
 
         <img src="pictures/grape-fruit-cross-section.png" width="332" height="332">
     </body>
